--- a/services/mail-service/src/main/resources/mail.conf
+++ b/services/mail-service/src/main/resources/mail.conf
@@ -1,12 +1,1 @@
-mail {
-  host: smtp.yandex.ru
-  port: 465
-  username: "user@yandex.ru"
-  password: password
-  useSSL: true
-  useTLS: false
-  debug: true
-  fromName: MasterJava
-}
-
-include required(file("/apps/masterjava/config/mail.conf"))
+include file("D:/apps/masterjava/config/mail.conf")
