--- a/services/mail-service/src/main/resources/mail.conf
+++ b/services/mail-service/src/main/resources/mail.conf
@@ -9,4 +9,4 @@ mail {
   fromName: MasterJava
 }
 
-include required(file("/apps/masterjava/config/mail.conf"))
+include required(file("I:/apps/masterjava/config/mail.conf"))
